fixed the main banner not showing properly due to png format on IE6

--- a/www-framework/kpw/html/css/layout.css
+++ b/www-framework/kpw/html/css/layout.css
@@ -29,7 +29,7 @@
     margin: 0 auto;
     padding-top: 120px;
     width: 860px;
-    background: transparent url(./../images/kpw_horizontal.png) no-repeat scroll center 20px !important;
+    background: transparent url(./../images/kpw_horizontal.gif) no-repeat scroll center 20px !important;
 }
 .clearfix {
     _height: 1px;
